Tratamento de livros, mapper e melhorias.